removed smooth scrolling to fix screenshots cutting off

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,7 +11,7 @@
 :root {
   --roundness: 0.25rem;
   --font: "Roboto Mono";
-  scroll-behavior: smooth;
+  // scroll-behavior: smooth;
   scroll-padding-top: 2rem;
 }
 
@@ -2647,10 +2647,10 @@ key {
   display: grid;
   gap: 2rem;
 
-  .created{
+  .created {
     text-align: center;
     color: var(--sub-color);
-    a{
+    a {
       text-decoration: none;
     }
   }
@@ -2659,14 +2659,15 @@ key {
     display: grid;
     gap: 0.25rem;
 
-    .title{
+    .title {
       font-size: 2rem;
       line-height: 2rem;
       color: var(--sub-color);
       margin: 1rem 0;
     }
 
-    .supporters, .contributors {
+    .supporters,
+    .contributors {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr 1fr;
       gap: 0.25rem;
@@ -3568,7 +3569,6 @@ key {
   color: var(--bg-color);
   transition: 0.25s;
 }
-
 
 .keymap {
   display: grid;
